RESOLVED FIXED183248
SWServer::removeClientServiceWorkerRegistration should not log an error if there is no registration
https://bugs.webkit.org/show_bug.cgi?id=183248
Summary SWServer::removeClientServiceWorkerRegistration should not log an error if th...
youenn fablet
Reported 2018-03-01 10:23:07 PST
This log appears when running many layout and api tests. There are legit cases for which registration would not be null (parallel unregisters or clearing registrations).
Attachments
Patch (2.30 KB, patch)
2018-03-01 10:29 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-03-01 10:29:49 PST
WebKit Commit Bot
Comment 2 2018-03-01 15:14:50 PST
Comment on attachment 334824 [details] Patch Clearing flags on attachment: 334824 Committed r229149: <https://trac.webkit.org/changeset/229149>
WebKit Commit Bot
Comment 3 2018-03-01 15:14:51 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-03-01 15:15:46 PST
Note You need to log in before you can comment on or make changes to this bug.